--- a/src/app/registration-bar/registration-bar.component.html
+++ b/src/app/registration-bar/registration-bar.component.html
@@ -3,11 +3,9 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="#"></a>
     </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#"></a></li>
-      <li><a href="#"></a></li>
-      <li><a href="#"></a></li>
+    <ul class="nav navbar-nav navbar-right">
+      <li><button (click)="onClick()">Login</button></li>
+      <li><a href="#">Register</a></li>
     </ul>
   </div>
 </nav>
